--- a/LIB-FrontEnd/appsscript.json
+++ b/LIB-FrontEnd/appsscript.json
@@ -1,7 +1,6 @@
 {
   "timeZone": "America/Santiago",
-  "dependencies": {
-  },
+  "dependencies": {},
   "exceptionLogging": "STACKDRIVER",
   "runtimeVersion": "V8"
 }
